--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-grid-carousel": "^1.0.1",
     "react-icons": "^4.4.0",
     "react-number-format": "^4.9.3",
     "react-router-dom": "^6.3.0",
